[package]
name = "icu_pattern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.10"

[dev-dependencies]
criterion = "0.3"
iai = "0.1.1"

[[bench]]
name = "datetime"
harness = false

# [[bench]]
# name = "iai_datetime"
# harness = false
